# htmlOnlyChat

./: .gitignore  Cargo.toml  README.md  index.html  main.py  package.json  requirements.txt  start.sh
.github/: chat_showcase.webm
.github/workflows/: test.yml
src/: index.js  main.js  main.py  main.rs
test/: main.test.js
