[package]
name = "htmlOnlyChat"
version = "0.1.0"
authors = [
    "Johannes (Jotrorox) Müller"
]
edition = "2021"
description = "A simple chat implementation that only uses a external server and html"
license = "AGPL-3.0"
repository = "https://github.com/Jotrorox/htmlOnlyChat"
homepage = "https://github.com/Jotrorox/htmlOnlyChat"
readme = "README.md"

[dependencies]
image = "0.25.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
